kubernetes-gateway-api-hands-on/exercises/03-path-and-header-routing/exercise/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: routing-route
  namespace: gateway-lab
spec:
  parentRefs:
    - name: lab-gateway
  hostnames:
    - ________
  rules:
    - matches:
        - headers:
            - name: ________
              type: Exact
              value: ________
      backendRefs:
        - name: ________
          port: 8080
    - matches:
        - path:
            type: ________
            value: /auth
      backendRefs:
        - name: ________
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: ________
      backendRefs:
        - name: orders
          port: 8080
    - backendRefs:
        - name: ________
          port: 8080
